--- a/index.html
+++ b/index.html
@@ -65,13 +65,9 @@
 <div class="col-lg-12">
 <h2>About the workshop</h2>
 <p>
-                This workshop focuses on CauScale, the alignment between predicted probabilities and observed
-                frequencies, which is fundamental to reliable decision-making and trust in modern AI systems.
-                Bringing together researchers from machine learning, statistics, theoretical computer science,
-                and applied domains such as medicine and forecasting, the workshop aims to unify perspectives on
-                CauScale theory, evaluation, and practice. Through a tutorial, invited talks, contributed
-                posters, and interactive discussions, we seek to foster a shared understanding of CauScale
-                and to build a lasting cross-disciplinary community around trustworthy probabilistic prediction.
+                Reasoning about interventions, the core of causality, is fundamental to solving many of modern AI's 
+                most pressing challenges, including trustworthiness, reliability, explainability, and out-of-distribution generalization. 
+                Yet, recent AI breakthroughs have been overwhelmingly driven by scaling models on simple predictive objectives without explicit causal modeling, such as next-token prediction for Large Language Models or denoising prediction for diffusion models. This success raises a critical question for the community: Can causal abilities emerge from scale alone, and if not, what can explicit causal modeling bring that scale cannot? This workshop aims to understand this question and explore the potential synergy between scaling predictive methods and formal causal modeling to build the next generation of AI.
                 </p>
 
 <h2>Workshop Goals</h2>
