--- a/index.html
+++ b/index.html
@@ -65,10 +65,8 @@
 <div class="col-lg-12">
 <h2>About the workshop</h2>
 <p>
-                Reasoning about interventions, the core of causality, is fundamental to solving many of modern AI's 
-                most pressing challenges, including trustworthiness, reliability, explainability, and out-of-distribution generalization. 
-                Yet, recent AI breakthroughs have been overwhelmingly driven by scaling models on simple predictive objectives without explicit causal modeling, such as next-token prediction for Large Language Models or denoising prediction for diffusion models. This success raises a critical question for the community: Can causal abilities emerge from scale alone, and if not, what can explicit causal modeling bring that scale cannot? This workshop aims to understand this question and explore the potential synergy between scaling predictive methods and formal causal modeling to build the next generation of AI.
-                </p>
+Reasoning about interventions, the core of causality, is fundamental to solving many of modern AI's most pressing challenges, including trustworthiness, reliability, explainability, and out-of-distribution generalization. Yet, recent AI breakthroughs have been overwhelmingly driven by scaling models on simple predictive objectives without explicit causal modeling, such as next-token prediction for Large Language Models or denoising prediction for diffusion models. This success raises a critical question for the community: Can causal abilities emerge from scale alone, and if not, what can explicit causal modeling bring that scale cannot? This workshop aims to understand this question and explore the potential synergy between scaling predictive methods and formal causal modeling to build the next generation of AI.
+</p>
 
 <h2>Workshop Goals</h2>
 <ul class="fa-ul">
@@ -103,12 +101,11 @@
 <div class="container" data-aos="fade-up" data-aos-delay="200">
 <p>We invite submissions exploring the synergy between scaling predictive methods and causal modeling to build the next generation of trustworthy and reliable AI.</p>
 <h3>Topics</h3>
-<p>Particular interest in papers that interface and provide bridges between topics in AI scaling and causality. Other potential topics include, but are not limited to:</p>
-<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-check"></i></span>Emergence of causal abilities in foundation models (or the failure thereof)</li><li><span class="fa-li"><i class="fa fa-check"></i></span>OOD generalization and robustness of large models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Scaling and accelerating inference in causal generative models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Counterfactual and logical reasoning</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Causal modeling and reasoning in large models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Design of interactive causal world models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Trustworthy and interpretable AI</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Evaluation and benchmarking (and the limitations thereof)</li></ul>
+<p>Potential topics include, but are not limited to:</p>
+<ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-check"></i></span>Emergence of causal abilities in foundation models (or the failure thereof)</li><li><span class="fa-li"><i class="fa fa-check"></i></span>OOD generalization and robustness of large models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Scaling causal generative modeling and representation learning </li><li><span class="fa-li"><i class="fa fa-check"></i></span>Causal, counterfactual, and logical reasoning in large models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Design of interactive causal world models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Trustworthy and interpretable AI</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Causal discovery and abstraction (especially applied to AI)</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Evaluation and benchmarking (and the limitations thereof)</li></ul>
 <h3>Submission</h3>
 <p>
-          We invite submissions of short papers presenting recent work on CauScale.
-          Submissions are accepted through <a href="https://openreview.net/group?id=aistats.org/AISTATS/2026/Workshop/CauScale">OpenReview</a>.
+          We invite submissions of short papers presenting recent work on scaling and causality. Submissions are accepted through <a href="https://openreview.net/group?id=aistats.org/AISTATS/2026/Workshop/CauScale">OpenReview</a>.
         </p>
 <h3>Important dates</h3>
 <ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Submission deadline: </strong>February 27, 2026 (Anywhere on Earth)</li><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Notification of acceptance: </strong>March 18, 2026 (Anywhere on Earth)</li><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Workshop date: </strong>May 5, 2026</li></ul>
