--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 <div class="d-flex flex-column align-items-center align-items-lg-start">
 <p class="mb-1">For any questions, please contact:</p>
 <p class="mb-2">
-<a href="mailto:CauScale-workshop-aistats-2026@googlegroups.com">CauScale-workshop-aistats-2026@googlegroups.com</a>
+<a href="mailto:CauScale.Workshop@gmail.com">CauScale.Workshop@gmail.com</a>
 </p>
 <!-- <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
             <a href=""><i class="bi bi-twitter-x"></i></a>
