--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 <div class="col-lg-12">
 <h2>About the workshop</h2>
 <p>
-Reasoning about interventions, the core of causality, is fundamental to solving many of modern AI's most pressing challenges, including trustworthiness, reliability, explainability, and out-of-distribution generalization. Yet, recent AI breakthroughs have been overwhelmingly driven by scaling models on simple predictive objectives without explicit causal modeling, such as next-token prediction for Large Language Models or denoising prediction for diffusion models. This success raises a critical question for the community: Can causal abilities emerge from scale alone, and if not, what can explicit causal modeling bring that scale cannot? This workshop aims to understand this question and explore the potential synergy between scaling predictive methods and formal causal modeling to build the next generation of AI.
+Reasoning about interventions, the core of causality, is fundamental to solving many of modern AI's most pressing challenges, including trustworthiness, reliability, explainability, and out-of-distribution generalization. Yet, recent AI breakthroughs have been overwhelmingly driven by scaling models on simple predictive objectives without explicit causal modeling, such as next-token prediction for Large Language Models or denoising prediction for diffusion models. This success raises a critical question for the community: <em> Can causal abilities emerge from scale alone, and if not, what can explicit causal modeling bring that scale cannot?</em> This workshop aims to understand this question and explore the potential synergy between scaling predictive methods and formal causal modeling to build the next generation of AI.
 </p>
 
 <h2>Workshop Goals</h2>
