--- a/index.html
+++ b/index.html
@@ -74,10 +74,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
     Can causal abilities emerge from scale alone, and if not, what can explicit causal modeling bring that scale cannot?
   </li>
   <li><span class="fa-li"><i class="fa fa-check"></i></span>
-    Is scaling sufficient for building intelligent systems? If not, is causal reasoning needed?
-  </li>
-  <li><span class="fa-li"><i class="fa fa-check"></i></span>
-    What are the limitations and opportunities of scaling AI models?
+    Is scaling sufficient for building intelligent systems? If not, is causal reasoning needed? What are the limitations and opportunities of scaling AI models?
   </li>
   <li><span class="fa-li"><i class="fa fa-check"></i></span>
     What are the challenges in developing scalable causal algorithms that can be potentially integrated into existing AI models?
