--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 <ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-check"></i></span>Emergence of causal abilities in foundation models (or the failure thereof)</li><li><span class="fa-li"><i class="fa fa-check"></i></span>OOD generalization and robustness of large models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Scaling causal generative modeling and representation learning </li><li><span class="fa-li"><i class="fa fa-check"></i></span>Causal, counterfactual, and logical reasoning in large models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Design of interactive causal world models</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Trustworthy and interpretable AI</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Causal discovery and abstraction (especially applied to AI)</li><li><span class="fa-li"><i class="fa fa-check"></i></span>Evaluation and benchmarking (and the limitations thereof)</li></ul>
 <h3>Submission</h3>
 <p>
-          We invite submissions of short papers presenting recent work on scaling and causality. Submissions are accepted through <a href="https://openreview.net/group?id=aistats.org/AISTATS/2026/Workshop/CauScale">OpenReview</a>.
+          We invite submissions of short papers presenting recent work on scaling and causality. 
+          Submissions will be handled via OpenReview. The submission link will be announced soon.
+          <!-- Submissions are accepted through <a href="https://openreview.net/group?id=aistats.org/AISTATS/2026/Workshop/CauScale">OpenReview</a>. -->   
         </p>
 <h3>Important dates</h3>
 <ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Submission deadline: </strong>February 27, 2026 (Anywhere on Earth)</li><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Notification of acceptance: </strong>March 18, 2026 (Anywhere on Earth)</li><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Workshop date: </strong>May 5, 2026</li></ul>
