--- a/index.html
+++ b/index.html
@@ -106,21 +106,21 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
           Submissions will be handled via OpenReview. The submission link will be announced soon.
           <!-- Submissions are accepted through <a href="https://openreview.net/group?id=aistats.org/AISTATS/2026/Workshop/CauScale">OpenReview</a>. -->   
         </p>
+ <p>
+          Submissions should be formatted using the AISTATS LaTeX style. 
+  Papers are limited to <strong> 4 pages</strong> (excluding references and appendices). 
+  Accepted contributions will be presented as posters during the workshop. 
+  We will select a small number of contributed talks from the accepted submissions for short oral presentations at the workshop.
+ </p>
+ <p>
+  Submissions under review or accepted within the past year at other venues are allowed. 
+  All accepted papers are non-archival and will be made publicly available on OpenReview.
+ </p>
+  
 <h3>Important dates</h3>
 <ul class="fa-ul"><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Submission deadline: </strong>February 27, 2026 (Anywhere on Earth)</li><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Notification of acceptance: </strong>March 18, 2026 (Anywhere on Earth)</li><li><span class="fa-li"><i class="fa fa-check"></i></span><strong>Workshop date: </strong>May 5, 2026</li></ul>
 <!-- <p>All deadlines are AoE (Anywhere on Earth).</p> -->
-<h3>Format</h3>
-<p>
-          Submissions should be formatted using the AISTATS LaTeX style.
-          Papers are limited to <strong>4 pages</strong> (excluding references).
-          The review process will be double-blind.
-          Accepted contributions will be presented as posters during the workshop.
-        </p>
-<h3>Policies</h3>
-<p>
-          Submissions under review at other venues are allowed.
-          All accepted papers are non-archival and will be made publicly available on OpenReview.
-        </p>
+
 </div>
 
 </section><!-- /Call for papers Section -->
