--- a/index.html
+++ b/index.html
@@ -195,27 +195,27 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
       <tr>
         <th>Time</th>
         <th>Activity</th>
-        <th>Notes</th>
       </tr>
     </thead>
     <tbody>
-      <tr><td>9:00 - 9:10</td><td>Welcome &amp; Opening</td><td>Extra 5 mins for late arrivals.</td></tr>
-      <tr><td>9:10 - 9:40</td><td>Invited Talk 1</td><td>(25 min talk + 5 min Q&amp;A)</td></tr>
-      <tr><td>9:40 - 10:10</td><td>Invited Talk 2</td><td>(25 min talk + 5 min Q&amp;A)</td></tr>
-      <tr><td>10:10 - 10:25</td><td>Contributed Talks</td><td>3 x 5 min (gives more people a spotlight).</td></tr>
-      <tr><td>10:25 - 10:45</td><td>Morning Break</td><td>20 mins for coffee/networking.</td></tr>
-      <tr><td>10:45 - 12:00</td><td>Poster Session I</td><td>75 mins of dedicated viewing.</td></tr>
-      <tr><td>12:00 - 1:00</td><td>Lunch</td><td></td></tr>
-      <tr><td>1:00 - 1:30</td><td>Invited Talk 3</td><td>(25 min talk + 5 min Q&amp;A)</td></tr>
-      <tr><td>1:30 - 2:00</td><td>Invited Talk 4</td><td>(25 min talk + 5 min Q&amp;A)</td></tr>
-      <tr><td>2:00 - 2:15</td><td>Contributed Talks</td><td>3 x 5 min.</td></tr>
-      <tr><td>2:15 - 3:30</td><td>Poster Session II</td><td>75 mins.</td></tr>
-      <tr><td>3:30 - 4:00</td><td>Invited Talk 5</td><td>(25 min talk + 5 min Q&amp;A)</td></tr>
-      <tr><td>4:00 - 4:55</td><td>Panel Discussion</td><td></td></tr>
-      <tr><td>4:55 - 5:00</td><td>Closing Remarks</td><td>Thank sponsors and volunteers!</td></tr>
+      <tr><td>9:00 - 9:10</td><td>Welcome &amp; Opening</td></tr>
+      <tr><td>9:10 - 9:40</td><td>Invited Talk 1</td></tr>
+      <tr><td>9:40 - 10:10</td><td>Invited Talk 2</td></tr>
+      <tr><td>10:10 - 10:25</td><td>Contributed Talks</td></tr>
+      <tr><td>10:25 - 10:45</td><td>Morning Break</td></tr>
+      <tr><td>10:45 - 12:00</td><td>Poster Session I</td></tr>
+      <tr><td>12:00 - 1:00</td><td>Lunch</td></tr>
+      <tr><td>1:00 - 1:30</td><td>Invited Talk 3</td></tr>
+      <tr><td>1:30 - 2:00</td><td>Invited Talk 4</td></tr>
+      <tr><td>2:00 - 2:15</td><td>Contributed Talks</td></tr>
+      <tr><td>2:15 - 3:30</td><td>Poster Session II</td></tr>
+      <tr><td>3:30 - 4:00</td><td>Invited Talk 5</td></tr>
+      <tr><td>4:00 - 4:55</td><td>Panel Discussion</td></tr>
+      <tr><td>4:55 - 5:00</td><td>Closing Remarks</td></tr>
     </tbody>
   </table>
 </div>
+
 
 </section><!-- /Schedule Section -->
 <!-- Speakers Section -->
