--- a/index.html
+++ b/index.html
@@ -183,88 +183,96 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
   </div>
 </div>
 </section><!-- /Speakers Section -->
+ 
 <!-- Schedule Section -->
 <section class="schedule section" id="schedule">
-<!-- Section Title -->
-<div class="container section-title" data-aos="fade-up"><p><em>TBD</em></p></div>
-<div class="container" data-aos="fade-up" data-aos-delay="200">
-  <p><em>TBD</em></p>
-<div class="table-responsive">
-  <table class="table">
-    <thead>
-      <tr>
-        <th>Time</th>
-        <th>Activity</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr><td>9:00 - 9:10</td><td>Welcome &amp; Opening</td></tr>
-      <tr><td>9:10 - 9:40</td><td>Invited Talk 1</td></tr>
-      <tr><td>9:40 - 10:10</td><td>Invited Talk 2</td></tr>
-      <tr><td>10:10 - 10:25</td><td>Contributed Talks</td></tr>
-      <tr><td>10:25 - 10:45</td><td>Morning Break</td></tr>
-      <tr><td>10:45 - 12:00</td><td>Poster Session I</td></tr>
-      <tr><td>12:00 - 1:00</td><td>Lunch</td></tr>
-      <tr><td>1:00 - 1:30</td><td>Invited Talk 3</td></tr>
-      <tr><td>1:30 - 2:00</td><td>Invited Talk 4</td></tr>
-      <tr><td>2:00 - 2:15</td><td>Contributed Talks</td></tr>
-      <tr><td>2:15 - 3:30</td><td>Poster Session II</td></tr>
-      <tr><td>3:30 - 4:00</td><td>Invited Talk 5</td></tr>
-      <tr><td>4:00 - 4:55</td><td>Panel Discussion</td></tr>
-      <tr><td>4:55 - 5:00</td><td>Closing Remarks</td></tr>
-    </tbody>
-  </table>
-</div>
 
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Schedule</h2>
+  </div>
+
+  <div class="container" data-aos="fade-up" data-aos-delay="200">
+    <div class="table-responsive">
+      <table class="table">
+        <thead>
+          <tr>
+            <th>Time</th>
+            <th>Activity</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr><td>9:00 - 9:10</td><td>Welcome &amp; Opening</td></tr>
+          <tr><td>9:10 - 9:40</td><td>Invited Talk 1</td></tr>
+          <tr><td>9:40 - 10:10</td><td>Invited Talk 2</td></tr>
+          <tr><td>10:10 - 10:25</td><td>Contributed Talks</td></tr>
+          <tr><td>10:25 - 10:45</td><td>Morning Break</td></tr>
+          <tr><td>10:45 - 12:00</td><td>Poster Session I</td></tr>
+          <tr><td>12:00 - 1:00</td><td>Lunch</td></tr>
+          <tr><td>1:00 - 1:30</td><td>Invited Talk 3</td></tr>
+          <tr><td>1:30 - 2:00</td><td>Invited Talk 4</td></tr>
+          <tr><td>2:00 - 2:15</td><td>Contributed Talks</td></tr>
+          <tr><td>2:15 - 3:30</td><td>Poster Session II</td></tr>
+          <tr><td>3:30 - 4:00</td><td>Invited Talk 5</td></tr>
+          <tr><td>4:00 - 4:55</td><td>Panel Discussion</td></tr>
+          <tr><td>4:55 - 5:00</td><td>Closing Remarks</td></tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
 
 </section><!-- /Schedule Section -->
-<!-- Speakers Section -->
-<section class="speakers section" id="organizers">
-<!-- Section Title -->
-<div class="container section-title" data-aos="fade-up"><p><em>TBD</em></p></div>
-<div class="container" data-aos="fade-up" data-aos-delay="200">
-  <p><em>TBD</em></p>
-  <div class="row gy-4 justify-content-center">
 
-    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-      <div class="member">
-        <div class="member-img">
-          <img src="assets/img/organizers/david.png" class="img-fluid" alt="Organizer photo placeholder">
-        </div>
-        <div class="member-info">
-          <h4>David Inouye</h4>
-          <span>Purdue University</span>
-        </div>
-      </div>
-    </div>
+<!-- Organizers Section -->
+<section class="organizers section" id="organizers">
 
-    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-      <div class="member">
-        <div class="member-img">
-          <img src="assets/img/organizers/bryon.jpg" class="img-fluid" alt="Organizer photo placeholder">
-        </div>
-        <div class="member-info">
-          <h4>Bryon Aragam</h4>
-          <span>University of Chicago</span>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-      <div class="member">
-        <div class="member-img">
-          <img src="assets/img/organizers/murat.jpeg" class="img-fluid" alt="Organizer photo placeholder">
-        </div>
-        <div class="member-info">
-          <h4>Murat Kocaoglu</h4>
-          <span>Johns Hopkins University</span>
-        </div>
-      </div>
-    </div>
-
+  <div class="container section-title" data-aos="fade-up">
+    <h2>Organizers</h2>
   </div>
-</div>
-</section><!-- /Speakers Section -->
+
+  <div class="container" data-aos="fade-up" data-aos-delay="200">
+    <div class="row gy-4 justify-content-center">
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+        <div class="member">
+          <div class="member-img">
+            <img src="assets/img/organizers/david.png" class="img-fluid" alt="David Inouye">
+          </div>
+          <div class="member-info">
+            <h4>David Inouye</h4>
+            <span>Purdue University</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+        <div class="member">
+          <div class="member-img">
+            <img src="assets/img/organizers/bryon.jpg" class="img-fluid" alt="Bryon Aragam">
+          </div>
+          <div class="member-info">
+            <h4>Bryon Aragam</h4>
+            <span>University of Chicago</span>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+        <div class="member">
+          <div class="member-img">
+            <img src="assets/img/organizers/murat.jpeg" class="img-fluid" alt="Murat Kocaoglu">
+          </div>
+          <div class="member-info">
+            <h4>Murat Kocaoglu</h4>
+            <span>Johns Hopkins University</span>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</section><!-- /Organizers Section -->
+
 </main>
 <footer class="footer dark-background" id="footer">
 <div class="copyright text-center">
