--- a/index.html
+++ b/index.html
@@ -129,7 +129,9 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 <!-- Section Title -->
 <div class="container section-title" data-aos="fade-up"><p><em>Keynote Speakers</em></p></div>
 <div class="container" data-aos="fade-up" data-aos-delay="200">
-  <p><em>TBD</em></p>
+
+  <h3>Invited Speakers</h3>
+
   <div class="row gy-4">
 
     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
