--- a/index.html
+++ b/index.html
@@ -141,8 +141,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
           <img src="assets/img/speakers/mihaela_van_der_schaar.webp" class="img-fluid" alt="Speaker photo placeholder">
         </div>
         <div class="member-info">
-          <h4>Mihaela van der Schaar</h4>
-          <span>University of Cambridge</span>
+           <div class="member-info-content">
+             <h4>Mihaela van der Schaar</h4>
+             <span>University of Cambridge</span>
+            </div>
         </div>
       </div>
     </div>
@@ -153,8 +155,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
           <img src="assets/img/speakers/francesco_locatello.jpg" class="img-fluid" alt="Speaker photo placeholder">
         </div>
         <div class="member-info">
+         <div class="member-info-content">
           <h4>Francesco Locatello</h4>
           <span>Institute of Science and Technology Austria</span>
+          </div>
         </div>
       </div>
     </div>
@@ -165,8 +169,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
           <img src="assets/img/speakers/sara_magliacane.jpg" class="img-fluid" alt="Speaker photo placeholder">
         </div>
         <div class="member-info">
-          <h4>Sara Magliacane</h4>
+          <div class="member-info-content">
+           <h4>Sara Magliacane</h4>
           <span>University of Amsterdam</span>
+           </div>
         </div>
       </div>
     </div>
@@ -177,8 +183,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
           <img src="assets/img/speakers/alex_damour.jpg" class="img-fluid" alt="Speaker photo placeholder">
         </div>
         <div class="member-info">
+         <div class="member-info-content">
           <h4>Alexander D'Amour</h4>
           <span>Google DeepMind</span>
+          </div>
         </div>
       </div>
     </div>
