--- a/index.html
+++ b/index.html
@@ -127,7 +127,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 <!-- Speakers Section -->
 <section class="speakers section" id="speakers">
 <!-- Section Title -->
-<div class="container section-title" data-aos="fade-up"><p><em>Keynote Speakers</em></p></div>
+<div class="container section-title" data-aos="fade-up">
+  <h2>Speakers</h2>
+  <p><em>Keynote Speakers</em></p>
+</div>
 <div class="container" data-aos="fade-up" data-aos-delay="200">
 
 <div class="container section-title" data-aos="fade-up">
