--- a/index.html
+++ b/index.html
@@ -133,9 +133,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 </div>
 <div class="container" data-aos="fade-up" data-aos-delay="200">
 
-<div class="container section-title" data-aos="fade-up">
+ <div class="section-title" data-aos="fade-up">
   <h2>Invited Speakers</h2>
 </div>
+
   <div class="row gy-4">
 
     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
