--- a/index.html
+++ b/index.html
@@ -128,14 +128,9 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 <section class="speakers section" id="speakers">
 <!-- Section Title -->
 <div class="container section-title" data-aos="fade-up">
-  <h2>Speakers</h2>
-  <p><em>Keynote Speakers</em></p>
+  <h2>Keynote Speakers</h2>
 </div>
 <div class="container" data-aos="fade-up" data-aos-delay="200">
-
- <div class="section-title" data-aos="fade-up">
-  <h2>Invited Speakers</h2>
-</div>
 
   <div class="row gy-4">
 
