--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 </section><!-- /Schedule Section -->
 
 <!-- Organizers Section -->
-<section class="organizers section" id="organizers">
+<section class="speakers section" id="organizers">
 
   <div class="container section-title" data-aos="fade-up">
     <h2>Organizers</h2>
