--- a/index.html
+++ b/index.html
@@ -248,8 +248,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
             <img src="assets/img/organizers/david.png" class="img-fluid" alt="David Inouye">
           </div>
           <div class="member-info">
+          <div class="member-info-content">
             <h4>David Inouye</h4>
             <span>Purdue University</span>
+           </div>
           </div>
         </div>
       </div>
@@ -260,8 +262,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
             <img src="assets/img/organizers/bryon.jpg" class="img-fluid" alt="Bryon Aragam">
           </div>
           <div class="member-info">
+           <div class="member-info-content">
             <h4>Bryon Aragam</h4>
             <span>University of Chicago</span>
+            </div>
           </div>
         </div>
       </div>
@@ -272,8 +276,10 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
             <img src="assets/img/organizers/murat.jpeg" class="img-fluid" alt="Murat Kocaoglu">
           </div>
           <div class="member-info">
+          <div class="member-info-content">
             <h4>Murat Kocaoglu</h4>
             <span>Johns Hopkins University</span>
+          </div>
           </div>
         </div>
       </div>
