Added OpenReview link

--- a/index.html
+++ b/index.html
@@ -103,8 +103,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 <h3>Submission</h3>
 <p>
           We invite submissions of short papers presenting recent work on scaling and causality. 
-          Submissions will be handled via OpenReview. The submission link will be announced soon.
-          <!-- Submissions are accepted through <a href="https://openreview.net/group?id=aistats.org/AISTATS/2026/Workshop/CauScale">OpenReview</a>. -->   
+          Submissions are now being accepted through <a href="https://openreview.net/group?id=aistats.org/AISTATS/2026/Workshop/CauScale">OpenReview</a>.  
         </p>
  <p>
           Submissions should be formatted using the AISTATS LaTeX style. 
