Added submission date at top and updated details
Added OpenReview required comment about creating a profile 2 weeks before submission deadline (this is required by OpenReview to put in CfP)

--- a/index.html
+++ b/index.html
@@ -56,8 +56,9 @@
 <img alt="" class="" data-aos="fade-in" src="assets/img/tangier.jpeg"/>
 <div class="container d-flex flex-column align-items-center text-center mt-auto">
 <h2 class="" data-aos="fade-up" data-aos-delay="100">Causality in the Age of AI Scaling</h2>
-<p data-aos="fade-up" data-aos-delay="200">5 May 2026</p>
 <p data-aos="fade-up" data-aos-delay="200">Tangier, Morocco</p>
+<p data-aos="fade-up" data-aos-delay="200">Workshop Date: 5 May 2026</p>
+<p data-aos="fade-up" data-aos-delay="200">Paper Submission Deadline: 27 February 2026 (AOE)</p>
 </div>
 <div class="about-info mt-auto position-relative">
 <div class="container position-relative" data-aos="fade-up">
@@ -114,6 +115,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
  <p>
   Submissions under review or accepted within the past year at other venues are allowed. 
   All accepted papers are non-archival and will be made publicly available on OpenReview.
+  Authors should create an OpenReview Profile at least two weeks in advance of the paper submission deadline.
  </p>
   
 <h3>Important dates</h3>
