Update paper submission deadline text in index.html

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <h2 class="" data-aos="fade-up" data-aos-delay="100">Causality in the Age of AI Scaling</h2>
 <p data-aos="fade-up" data-aos-delay="200">Tangier, Morocco</p>
 <p data-aos="fade-up" data-aos-delay="200">Workshop Date: 5 May 2026</p>
-<p data-aos="fade-up" data-aos-delay="200">Paper Submission Deadline: 27 February 2026 (AOE)</p>
+<p data-aos="fade-up" data-aos-delay="200">Submission Deadline: 27 February 2026 (AOE)</p>
 </div>
 <div class="about-info mt-auto position-relative">
 <div class="container position-relative" data-aos="fade-up">
