--- a/index.html
+++ b/index.html
@@ -149,6 +149,20 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
       </div>
     </div>
 
+       <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+      <div class="member">
+        <div class="member-img">
+          <img src="assets/img/speakers/sanmi_koyejo.jpg" class="img-fluid" alt="Speaker photo placeholder">
+        </div>
+        <div class="member-info">
+           <div class="member-info-content">
+             <h4>Sanmi Koyejo</h4>
+             <span>Stanford University</span>
+            </div>
+        </div>
+      </div>
+    </div>
+   
     <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
       <div class="member">
         <div class="member-img">
