--- a/index.html
+++ b/index.html
@@ -133,9 +133,9 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 </div>
 <div class="container" data-aos="fade-up" data-aos-delay="200">
 
-  <div class="row gy-4">
-
-    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-5 gy-4">
+   
+    <div class="col d-flex align-items-stretch"  data-aos="fade-up" data-aos-delay="100">
       <div class="member">
         <div class="member-img">
           <img src="assets/img/speakers/mihaela_van_der_schaar.webp" class="img-fluid" alt="Speaker photo placeholder">
@@ -149,7 +149,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
       </div>
     </div>
 
-       <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+      <div class="col d-flex align-items-stretch"  data-aos="fade-up" data-aos-delay="100">
       <div class="member">
         <div class="member-img">
           <img src="assets/img/speakers/sanmi_koyejo.jpg" class="img-fluid" alt="Speaker photo placeholder">
@@ -163,7 +163,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
       </div>
     </div>
    
-    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+    <div class="col d-flex align-items-stretch"  data-aos="fade-up" data-aos-delay="100">
       <div class="member">
         <div class="member-img">
           <img src="assets/img/speakers/francesco_locatello.jpg" class="img-fluid" alt="Speaker photo placeholder">
@@ -177,7 +177,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
       </div>
     </div>
 
-    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+    <div class="col d-flex align-items-stretch"  data-aos="fade-up" data-aos-delay="100">
       <div class="member">
         <div class="member-img">
           <img src="assets/img/speakers/sara_magliacane.jpg" class="img-fluid" alt="Speaker photo placeholder">
@@ -191,7 +191,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
       </div>
     </div>
 
-    <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="400">
+    <div class="col d-flex align-items-stretch"  data-aos="fade-up" data-aos-delay="100">
       <div class="member">
         <div class="member-img">
           <img src="assets/img/speakers/alex_damour.jpg" class="img-fluid" alt="Speaker photo placeholder">
