--- a/index.html
+++ b/index.html
@@ -255,8 +255,9 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
   </div>
 
   <div class="container" data-aos="fade-up" data-aos-delay="200">
-    <div class="row gy-4 justify-content-center">
 
+     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center gx-4 gy-4">
+      
       <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
         <div class="member">
           <div class="member-img">
@@ -271,7 +272,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+      <div class="col d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
         <div class="member">
           <div class="member-img">
             <img src="assets/img/organizers/bryon.jpg" class="img-fluid" alt="Bryon Aragam">
@@ -285,7 +286,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
         </div>
       </div>
 
-      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+      <div class="col d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
         <div class="member">
           <div class="member-img">
             <img src="assets/img/organizers/murat.jpeg" class="img-fluid" alt="Murat Kocaoglu">
