--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
 
      <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center gx-4 gy-4">
       
-      <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+      <div class="co d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
         <div class="member">
           <div class="member-img">
             <img src="assets/img/organizers/david.png" class="img-fluid" alt="David Inouye">
