--- a/index.html
+++ b/index.html
@@ -254,54 +254,54 @@ Reasoning about interventions, the core of causality, is fundamental to solving 
     <h2>Organizers</h2>
   </div>
 
-  <div class="container" data-aos="fade-up" data-aos-delay="200">
+ <div class="container" data-aos="fade-up" data-aos-delay="200" style="max-width: 900px;">
 
-     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center gx-4 gy-4">
-      
-      <div class="co d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
-        <div class="member">
-          <div class="member-img">
-            <img src="assets/img/organizers/david.png" class="img-fluid" alt="David Inouye">
-          </div>
-          <div class="member-info">
+  <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center gx-3 gy-4">
+
+    <div class="col d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="100">
+      <div class="member w-100">
+        <div class="member-img">
+          <img src="assets/img/organizers/david.png" class="img-fluid" alt="David Inouye">
+        </div>
+        <div class="member-info">
           <div class="member-info-content">
             <h4>David Inouye</h4>
             <span>Purdue University</span>
-           </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="col d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-        <div class="member">
-          <div class="member-img">
-            <img src="assets/img/organizers/bryon.jpg" class="img-fluid" alt="Bryon Aragam">
-          </div>
-          <div class="member-info">
-           <div class="member-info-content">
+    <div class="col d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
+      <div class="member w-100">
+        <div class="member-img">
+          <img src="assets/img/organizers/bryon.jpg" class="img-fluid" alt="Bryon Aragam">
+        </div>
+        <div class="member-info">
+          <div class="member-info-content">
             <h4>Bryon Aragam</h4>
             <span>University of Chicago</span>
-            </div>
           </div>
         </div>
       </div>
+    </div>
 
-      <div class="col d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
-        <div class="member">
-          <div class="member-img">
-            <img src="assets/img/organizers/murat.jpeg" class="img-fluid" alt="Murat Kocaoglu">
-          </div>
-          <div class="member-info">
+    <div class="col d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="300">
+      <div class="member w-100">
+        <div class="member-img">
+          <img src="assets/img/organizers/murat.jpeg" class="img-fluid" alt="Murat Kocaoglu">
+        </div>
+        <div class="member-info">
           <div class="member-info-content">
             <h4>Murat Kocaoglu</h4>
             <span>Johns Hopkins University</span>
           </div>
-          </div>
         </div>
       </div>
-
     </div>
+
   </div>
+</div>
 
 </section><!-- /Organizers Section -->
 
